--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+</html>   
 <html>
     <head>
         <title>Hello World</title>
@@ -6,5 +7,6 @@
     <body>
         <h1>Hello World</h1>
         <p>This is my first html page for Github.</p>
+        <p> This is a link to <a hrrf="file:///Users/smad/Desktop/new_project">my made up project</a></p>
     </body>
 </html>    
