--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML>
-</html>   
 <html>
     <head>
         <title>Hello World</title>
@@ -7,6 +6,6 @@
     <body>
         <h1>Hello World</h1>
         <p>This is my first html page for Github.</p>
-        <p> This is a link to <a hrrf="file:///Users/smad/Desktop/new_project">my made up project</a></p>
+        <p> This is a link to <a hrrf="file:///Users/smad/Desktop/new_project"</a> my made up project</p>
     </body>
-</html>    
+</html>   
