--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <body>
         <h1>Hello World</h1>
         <p>This is my first html page for Github.</p>
-        <p> This is a link to <a hrrf="file:///Users/smad/Desktop/new_project"</a> my made up project</p>
+        <p> This is a link to <a hrrf="https://deekaywest.github.io/westnk.github.io/new_project"</a> my made up project</p>
     </body>
 </html>   
