--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <h1>Hello World</h1>
         <p>This is my first html page for Github.</p>
         <p> This is a link to <a href="new_project.html"></a>my made up project</p>
+        <a href="https://www.w3schools.com">Visit W3Schools.com!</a>  
     </body>
 </html>   
