--- a/West-Resume.html
+++ b/West-Resume.html
@@ -5,7 +5,7 @@
     </head>
     
     <body>
-        <img src="" alt="">
+        <img src="file-3.jpeg" alt="">
         <section><h1><b>Nadeah Kay West</b></h1>
         <h2>Email: <a href="mailto:westnk@dukes.jmu.edu">westnk@dukes.jmu.edu</a></h2>
         <h2>Portfolio: <a href="https://deekaywest.wordpess.com"> https://deekaywest.wordpess.com</a></section>
