--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <h1>Hello World</h1>
         <p>This is my first html page for Github.</p>
         <p> This is a link to <a href="new_project.html">my made up project</a></p>
-        <p> This is a link to <a href="west-resume.html">my resume</a></p>
+        <p> This is a link to <a href="West-Resume.html">my resume</a></p>
     </body>
 </html>   
