--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <p>This is my first html page for Github.</p>
         <p> This is a link to <a href="new_project.html">my made up project</a></p>
         <p> This is a link to <a href="West-Resume.html">my resume</a></p>
+        <p> This is a link to <a href="my_story.html">my story</a></p>
     </body>
 </html>   
