added bulleted list

--- a/my_story.html
+++ b/my_story.html
@@ -2,10 +2,14 @@
 <html>
     <head>
         <title>What's Your Story </title>
+        <meta charset="utf-8">
+        <!-- additional infomration for seo optimization -->
+        <meta name="description" content="This is a summary/snippet for the page">
+        <meta name ="author" content="Nadeah West">
     </head>
     <body>
         <h1>An adventurous explorer who runs the world around her.</h1>
-        <section><p>Creative, Intelligent, Fun-loving, Ambitious, Calm, Goofy, Athletic, Brave.</p></section>
+        <section><p><ul> <li>Creative</li> <li>Intelligent</li> <li>Fun-Loving</li> <li>Ambitious</li> <li>Calm</li> <li>Goofy</li> <li>Athletic</li> <li>Brave</li></ul></p></section>
         <section><img src="file-4.jpeg" alt=""><img src="file4-2.jpeg" alt=""><img src="file5-1.jpeg" alt=""><img src="file3-2.jpeg" alt=""><img src="file1-2.jpeg" alt=""></section>
         <section><p>inspiration <a href="https://www.youtube.com/">YouTube.com</p></section>
     </body>
