--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Hello World</title>
+        <meta name="description" content="This is Dee's Github Page for SMAD 307">
+        <meta name="author" content="Nadeah West">
     </head>
     <body>
         <h1>Hello World</h1>
