--- a/West-Resume.html
+++ b/West-Resume.html
@@ -2,26 +2,89 @@
 <html>
     <head>
         <title>Resume</title>
+        <meta name="description" content="This is Dee's online resume">
+        <meta name="author" content="Nadeah West">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+        <style>
+            body {
+                font-family: 'Open Sans', sans-serif;
+            }
+        </style>
     </head>
     
+    <nav>
+        <ul>
+        <li><a href="Education">Education</a></li>
+        <li><a href="Work-Experience">Work Experience</a></li>
+        <li><a href="Job-Related-Training">Job Related Training</a></li>
+        <li><a href="Affiliations"></a>Affiliations</li>
+        </ul>
+    </nav>
+
     <body>
         <img src="file-3.jpeg" alt="">
+
         <section><h1><b>Nadeah Kay West</b></h1>
         <h2>Email: <a href="mailto:westnk@dukes.jmu.edu">westnk@dukes.jmu.edu</a></h2>
-        <h2>Portfolio: <a href="https://deekaywest.wordpess.com"> https://deekaywest.wordpess.com</a></section>
-        <section><h1><b>Education</b></h1>
-        <h2>James Madison University</h2>
-        <h3><ul> <li>Expected Gradtion date: 12/2020</li> <li>Major: Media Arts and Design</li> <li>Concentraion: Interactive Design</li> <li>Double Minor in Gerenal Business and Communications</li> <li>Current Year: Senior (2019-20)</li></ul></h3>
+        <h2>Portfolio: <a href="https://deekaywest.wordpess.com"> https://deekaywest.wordpess.com</a></h2></section>
+
+        <section id="Education">
+        <h1><b>Education</b></h1>
+        <h2><a href="jmu.edu">James Madison University</a></h2>
+        <h3><ul>
+            <li>Expected Gradtion date: 12/2020</li>
+            <li>Major: Media Arts and Design</li>
+            <li>Concentraion: Interactive Design</li>
+            <li>Double Minor in Gerenal Business and Communications</li>
+            <li>Current Year: Senior (2019-20)</li>
+        </ul></h3>
         <h2>Related Coureswork</h2>
-        <h3><ul> <li>Visual Communication Design</li> <li>User Experience Design</li> <li>Audience Analysis and Media</li> <li>User Interaction Design</li> <li>Business Managment and Digital Design</li> <li>Interpersonal Skills</li> <li>Elementary Statistics</li> <li>Computer Information Systems</li> <li>Persuasion</li> <li>Intro to Public Relations</li></ul></h3></section>
-        <section><h1><b>Work Experience</b></h1>
+        <h3><ul>
+            <li>Visual Communication Design</li>
+            <li>User Experience Design</li>
+            <li>Audience Analysis and Media</li>
+            <li>User Interaction Design</li>
+            <li>Business Managment and Digital Design</li>
+            <li>Interpersonal Skills</li>
+            <li>Elementary Statistics</li>
+            <li>Computer Information Systems</li>
+            <li>Persuasion</li>
+            <li>Intro to Public Relations</li>
+        </ul></h3></section>
+
+        <section id="Work-Experience">
+        <h1><b>Work Experience</b></h1>
         <h2>International Administrative Assistant at Hilldrup Moving and Storage (05/2017-08/2019)</h2>
-        <h3><ul> <li>Worked in the International Department computing rates</li> <li>contacted various partners around the world to establish rates for government moves</li> <li>Created mass spreadsheets to compare partners in various countries</li> <li>Helped with the relaunch of the company website to make it more user friendly</li></ul></h3>
+        <h3><ul>
+            <li>Worked in the International Department computing rates</li>
+            <li>contacted various partners around the world to establish rates for government moves</li> <li>Created mass spreadsheets to compare partners in various countries</li>
+            <li>Helped with the relaunch of the company website to make it more user friendly</li>
+        </ul></h3>
         <h2>Gymnastics Coach at Skyline Gymnastics (09/2016-04/2018)</h2>
-        <h3><ul> <li>Worked with beginner level girls in the development of gymnastics and life skills</li> <li>Rotated the children through different gymnastics stations</li> <li>Helped set up and break down mats at the beginning and end of the program</li></ul></h3></section>
-        <section><h1><b>Job Related Training</b></h1>
-        <h3><ul> <li>Certified in Microsoft PowerPoint 2010</li> <li>Certified in Microsoft Word 2010</li> <li>Certified in Microsoft Excel 2010</li> <li>Proficient in Adobe Dreamweaver</li> <li>Proficient in Adobe Photoshop</li> <li>Proficient in Adobe InDesign</li> <li>Proficient in Adobe Illustrator</li></ul></h3></section>
-        <section><h1><b>Affiliations</b></h1>
-        <h3><ul> <li>JMU Club Gymnatics</li> <li>Sigma Gamma Rho Sorority, Incorporated</li> <li>American Advertising Federation</li> <li>JMU Advertising Club</li></ul></h3></section>
+        <h3><ul>
+            <li>Worked with beginner level girls in the development of gymnastics and life skills</li> <li>Rotated the children through different gymnastics stations</li>
+            <li>Helped set up and break down mats at the beginning and end of the program</li>
+        </ul></h3></section>
+
+        <section id="Job-Related-Training">
+        <h1><b>Job Related Training</b></h1>
+        <h3><ul>
+            <li>Certified in Microsoft PowerPoint 2010</li>
+            <li>Certified in Microsoft Word 2010</li>
+            <li>Certified in Microsoft Excel 2010</li>
+            <li>Proficient in Adobe Dreamweaver</li>
+            <li>Proficient in Adobe Photoshop</li>
+            <li>Proficient in Adobe InDesign</li>
+            <li>Proficient in Adobe Illustrator</li>
+        </ul></h3></section>
+
+        <section id="Affiliaions">
+        <h1><b>Affiliations</b></h1>
+        <h3><ul>
+            <li>JMU Club Gymnatics</li>
+            <li>Sigma Gamma Rho Sorority, Incorporated</li>
+            <li>American Advertising Federation</li>
+            <li>JMU Advertising Club</li>
+        </ul></h3></section>
     </body>
 </html> 
