--- a/West-Resume.html
+++ b/West-Resume.html
@@ -28,8 +28,7 @@
         <h2>Email: <a href="mailto:westnk@dukes.jmu.edu">westnk@dukes.jmu.edu</a></h2>
         <h2>Portfolio: <a href="https://deekaywest.wordpess.com"> https://deekaywest.wordpess.com</a></h2></section>
 
-        <section id="Education">
-        <h1><b>Education</b></h1>
+        <section><h1><b id="education">Education</b></h1>
         <h2><a href="jmu.edu">James Madison University</a></h2>
         <h3><ul>
             <li>Expected Gradtion date: 12/2020</li>
