--- a/West-Resume.html
+++ b/West-Resume.html
@@ -14,10 +14,10 @@
     
     <nav>
         <ul>
-        <li><a href="Education">Education</a></li>
-        <li><a href="Work-Experience">Work Experience</a></li>
-        <li><a href="Job-Related-Training">Job Related Training</a></li>
-        <li><a href="Affiliations"></a>Affiliations</li>
+        <li><a href="#Education">Education</a></li>
+        <li><a href="#Work-Experience">Work Experience</a></li>
+        <li><a href="#Job-Related-Training">Job Related Training</a></li>
+        <li><a href="#Affiliations">Affiliations</a></li>
         </ul>
     </nav>
 
@@ -28,7 +28,7 @@
         <h2>Email: <a href="mailto:westnk@dukes.jmu.edu">westnk@dukes.jmu.edu</a></h2>
         <h2>Portfolio: <a href="https://deekaywest.wordpess.com"> https://deekaywest.wordpess.com</a></h2></section>
 
-        <section><h1><b id="education">Education</b></h1>
+        <section><h1><b id="Education">Education</b></h1>
         <h2><a href="jmu.edu">James Madison University</a></h2>
         <h3><ul>
             <li>Expected Gradtion date: 12/2020</li>
@@ -51,8 +51,7 @@
             <li>Intro to Public Relations</li>
         </ul></h3></section>
 
-        <section id="Work-Experience">
-        <h1><b>Work Experience</b></h1>
+        <section><h1><b id="Work-Experience">Work Experience</b></h1>
         <h2>International Administrative Assistant at Hilldrup Moving and Storage (05/2017-08/2019)</h2>
         <h3><ul>
             <li>Worked in the International Department computing rates</li>
@@ -65,8 +64,7 @@
             <li>Helped set up and break down mats at the beginning and end of the program</li>
         </ul></h3></section>
 
-        <section id="Job-Related-Training">
-        <h1><b>Job Related Training</b></h1>
+        <section><h1><b id="Job-Related-Training">Job Related Training</b></h1>
         <h3><ul>
             <li>Certified in Microsoft PowerPoint 2010</li>
             <li>Certified in Microsoft Word 2010</li>
@@ -77,8 +75,7 @@
             <li>Proficient in Adobe Illustrator</li>
         </ul></h3></section>
 
-        <section id="Affiliaions">
-        <h1><b>Affiliations</b></h1>
+        <section><h1><b id="Affiliations">Affiliations</b></h1>
         <h3><ul>
             <li>JMU Club Gymnatics</li>
             <li>Sigma Gamma Rho Sorority, Incorporated</li>
