--- a/West-Resume.html
+++ b/West-Resume.html
@@ -5,15 +5,28 @@
         <meta name="description" content="This is Dee's online resume">
         <meta name="author" content="Nadeah West">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-        <style>
-            body {
-                font-family: 'Open Sans', sans-serif;
+           <style>
+        h1 {
+            color: Purple;
+            font-size: large;
+            font-family: 'Open Sans', sans-serif;
             }
-        </style>
+        h2{
+            color: black;
+            font-size: Medium;
+            font-family: 'Open Sans', sans-serif;
+            }
+        h3{
+            color: black;
+            font-size: Small;
+            font-family: 'Open Sans', sans-serif;
+            }
+               list-style-type{circle}
+    </style>
     </head>
     
     <nav>
-        <ul>
+        <ul list-style-type{circle}>
         <li><a href="#Education">Education</a></li>
         <li><a href="#Work-Experience">Work Experience</a></li>
         <li><a href="#Job-Related-Training">Job Related Training</a></li>
@@ -22,7 +35,7 @@
     </nav>
 
     <body>
-        <img src="file-3.jpeg" alt="">
+        <img src="file-3.jpeg" alt=""{  float: right;   margin: 0 12px;}>
 
         <section><h1><b>Nadeah Kay West</b></h1>
         <h2>Email: <a href="mailto:westnk@dukes.jmu.edu">westnk@dukes.jmu.edu</a></h2>
