change bullet style?

--- a/West-Resume.html
+++ b/West-Resume.html
@@ -21,12 +21,12 @@
             font-size: Small;
             font-family: 'Open Sans', sans-serif;
             }
-               list-style-type{circle}
+
     </style>
     </head>
     
     <nav>
-        <ul list-style-type{circle}>
+        <ul {list-style-type:circle;}>
         <li><a href="#Education">Education</a></li>
         <li><a href="#Work-Experience">Work Experience</a></li>
         <li><a href="#Job-Related-Training">Job Related Training</a></li>
@@ -43,7 +43,7 @@
 
         <section><h1><b id="Education">Education</b></h1>
         <h2><a href="jmu.edu">James Madison University</a></h2>
-        <h3><ul>
+        <h3><ul {list-style-type:circle;}>
             <li>Expected Gradtion date: 12/2020</li>
             <li>Major: Media Arts and Design</li>
             <li>Concentraion: Interactive Design</li>
@@ -51,7 +51,7 @@
             <li>Current Year: Senior (2019-20)</li>
         </ul></h3>
         <h2>Related Coureswork</h2>
-        <h3><ul>
+        <h3><ul {list-style-type:circle;}>
             <li>Visual Communication Design</li>
             <li>User Experience Design</li>
             <li>Audience Analysis and Media</li>
@@ -66,19 +66,19 @@
 
         <section><h1><b id="Work-Experience">Work Experience</b></h1>
         <h2>International Administrative Assistant at Hilldrup Moving and Storage (05/2017-08/2019)</h2>
-        <h3><ul>
+        <h3><ul {list-style-type:circle;}>
             <li>Worked in the International Department computing rates</li>
             <li>contacted various partners around the world to establish rates for government moves</li> <li>Created mass spreadsheets to compare partners in various countries</li>
             <li>Helped with the relaunch of the company website to make it more user friendly</li>
         </ul></h3>
         <h2>Gymnastics Coach at Skyline Gymnastics (09/2016-04/2018)</h2>
-        <h3><ul>
+        <h3><ul {list-style-type:circle;}>
             <li>Worked with beginner level girls in the development of gymnastics and life skills</li> <li>Rotated the children through different gymnastics stations</li>
             <li>Helped set up and break down mats at the beginning and end of the program</li>
         </ul></h3></section>
 
         <section><h1><b id="Job-Related-Training">Job Related Training</b></h1>
-        <h3><ul>
+        <h3><ul {list-style-type:circle;}>
             <li>Certified in Microsoft PowerPoint 2010</li>
             <li>Certified in Microsoft Word 2010</li>
             <li>Certified in Microsoft Excel 2010</li>
@@ -89,7 +89,7 @@
         </ul></h3></section>
 
         <section><h1><b id="Affiliations">Affiliations</b></h1>
-        <h3><ul>
+        <h3><ul {list-style-type:circle;}>
             <li>JMU Club Gymnatics</li>
             <li>Sigma Gamma Rho Sorority, Incorporated</li>
             <li>American Advertising Federation</li>
