--- a/West-Resume.html
+++ b/West-Resume.html
@@ -25,7 +25,7 @@
     </head>
     
     <nav>
-        <ul {list-style-type:circle;}>
+        <ul {list-style-type: circle;}>
         <li><a href="#Education">Education</a></li>
         <li><a href="#Work-Experience">Work Experience</a></li>
         <li><a href="#Job-Related-Training">Job Related Training</a></li>
@@ -33,7 +33,7 @@
         </ul>
     </nav>
 
-    <body>
+    <body background-color:aqua;>
         <img src="file-3.jpeg" alt=""{  float: right;   margin: 0 12px;}>
 
         <section><h1><b>Nadeah Kay West</b></h1>
@@ -50,7 +50,7 @@
             <li>Current Year: Senior (2019-20)</li>
         </ul></h3>
         <h2>Related Coureswork</h2>
-        <h3><ul {list-style-type:circle;}>
+        <h3><ul {list-style-type: circle;}>
             <li>Visual Communication Design</li>
             <li>User Experience Design</li>
             <li>Audience Analysis and Media</li>
@@ -77,7 +77,7 @@
         </ul></h3></section>
 
         <section><h1><b id="Job-Related-Training">Job Related Training</b></h1>
-        <h3><ul {list-style-type:circle;}>
+        <h3><ul {list-style-type: circle;}>
             <li>Certified in Microsoft PowerPoint 2010</li>
             <li>Certified in Microsoft Word 2010</li>
             <li>Certified in Microsoft Excel 2010</li>
@@ -88,7 +88,7 @@
         </ul></h3></section>
 
         <section><h1><b id="Affiliations">Affiliations</b></h1>
-        <h3><ul {list-style-type:circle;}>
+        <h3><ul {list-style-type: circle;}>
             <li>JMU Club Gymnatics</li>
             <li>Sigma Gamma Rho Sorority, Incorporated</li>
             <li>American Advertising Federation</li>
