--- a/West-Resume.html
+++ b/West-Resume.html
@@ -2,30 +2,41 @@
 <html>
     <head>
         <title>Resume</title>
+        <meta charset="utf-8">
         <meta name="description" content="This is Dee's online resume">
         <meta name="author" content="Nadeah West">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-    <style>
-        h1 {
-            color: Purple;
-            font-size: large;
-            font-family: 'Open Sans', sans-serif;
-            }
-        h2{
-            color: black;
-            font-size: Medium;
-            font-family: 'Open Sans', sans-serif;
-            }
-        h3{
-            color: black;
-            font-size: Small;
-            font-family: 'Open Sans', sans-serif;
-            }
-    </style>
+        <style>
+            h1 {
+                color: Purple;
+                font-size: large;
+                font-family: 'Open Sans', sans-serif;
+                background: #00ffff;
+                }
+            h2{
+                color: black;
+                font-size: Medium;
+                font-family: 'Open Sans', sans-serif;
+                background: #00ffff;
+                }
+            h3{
+                color: black;
+                font-size: Small;
+                font-family: 'Open Sans', sans-serif;
+                background: #00ffff;
+                }
+            ul{
+                list-style-type: circle;
+                color: black;
+                font-size: Small;
+                font-family: 'Open Sans', sans-serif;
+                background: #00ffff;
+                }
+        </style>
     </head>
     
     <nav>
-        <ul {list-style-type: circle;}>
+        <ul>
         <li><a href="#Education">Education</a></li>
         <li><a href="#Work-Experience">Work Experience</a></li>
         <li><a href="#Job-Related-Training">Job Related Training</a></li>
@@ -33,8 +44,9 @@
         </ul>
     </nav>
 
-    <body background-color:aqua;>
-        <img src="file-3.jpeg" alt="" height:"1000"{  float: right;   margin: 0 12px;}>
+    <body>
+        
+        <img src="file-3.jpeg" alt="Picture of me.">
 
         <section><h1><b>Nadeah Kay West</b></h1>
         <h2>Email: <a href="mailto:westnk@dukes.jmu.edu">westnk@dukes.jmu.edu</a></h2>
@@ -42,15 +54,15 @@
 
         <section><h1><b id="Education">Education</b></h1>
         <h2><a href="jmu.edu">James Madison University</a></h2>
-        <h3><ul {list-style-type:circle;}>
-            <li>Expected Gradtion date: 12/2020</li>
+            <ul>
+            <li>Expected Graduation date: 12/2020</li>
             <li>Major: Media Arts and Design</li>
             <li>Concentraion: Interactive Design</li>
             <li>Double Minor in Gerenal Business and Communications</li>
             <li>Current Year: Senior (2019-20)</li>
-        </ul></h3>
+            </ul>
         <h2>Related Coureswork</h2>
-        <h3><ul {list-style-type: circle;}>
+            <ul>
             <li>Visual Communication Design</li>
             <li>User Experience Design</li>
             <li>Audience Analysis and Media</li>
@@ -61,23 +73,25 @@
             <li>Computer Information Systems</li>
             <li>Persuasion</li>
             <li>Intro to Public Relations</li>
-        </ul></h3></section>
+            </ul>
+        </section>
 
         <section><h1><b id="Work-Experience">Work Experience</b></h1>
         <h2>International Administrative Assistant at Hilldrup Moving and Storage (05/2017-08/2019)</h2>
-        <h3><ul {list-style-type:circle;}>
+            <ul>
             <li>Worked in the International Department computing rates</li>
             <li>contacted various partners around the world to establish rates for government moves</li> <li>Created mass spreadsheets to compare partners in various countries</li>
             <li>Helped with the relaunch of the company website to make it more user friendly</li>
-        </ul></h3>
+            </ul>
         <h2>Gymnastics Coach at Skyline Gymnastics (09/2016-04/2018)</h2>
-        <h3><ul {list-style-type:circle;}>
+            <ul>
             <li>Worked with beginner level girls in the development of gymnastics and life skills</li> <li>Rotated the children through different gymnastics stations</li>
             <li>Helped set up and break down mats at the beginning and end of the program</li>
-        </ul></h3></section>
+            </ul>
+        </section>
 
         <section><h1><b id="Job-Related-Training">Job Related Training</b></h1>
-        <h3><ul {list-style-type: circle;}>
+            <ul>
             <li>Certified in Microsoft PowerPoint 2010</li>
             <li>Certified in Microsoft Word 2010</li>
             <li>Certified in Microsoft Excel 2010</li>
@@ -85,14 +99,16 @@
             <li>Proficient in Adobe Photoshop</li>
             <li>Proficient in Adobe InDesign</li>
             <li>Proficient in Adobe Illustrator</li>
-        </ul></h3></section>
+            </ul>
+        </section>
 
         <section><h1><b id="Affiliations">Affiliations</b></h1>
-        <h3><ul {list-style-type: circle;}>
+            <ul>
             <li>JMU Club Gymnatics</li>
             <li>Sigma Gamma Rho Sorority, Incorporated</li>
             <li>American Advertising Federation</li>
             <li>JMU Advertising Club</li>
-        </ul></h3></section>
+            </ul>
+        </section>
     </body>
 </html> 
