--- a/West-Resume.html
+++ b/West-Resume.html
@@ -25,6 +25,9 @@
                 font-family: 'Open Sans', sans-serif;
                 background: #00ffff;
                 }
+            body{ background-color: #00ffff;
+                
+            }
             ul{
                 list-style-type: circle;
                 color: black;
