change background color to grey

--- a/West-Resume.html
+++ b/West-Resume.html
@@ -11,29 +11,29 @@
                 color: Purple;
                 font-size: large;
                 font-family: 'Open Sans', sans-serif;
-                background: #00ffff;
+                background: #C0C0C0;
                 }
             h2{
                 color: black;
                 font-size: Medium;
                 font-family: 'Open Sans', sans-serif;
-                background: #00ffff;
+                background: #C0C0C0;
                 }
             h3{
                 color: black;
                 font-size: Small;
                 font-family: 'Open Sans', sans-serif;
-                background: #00ffff;
+                background: #C0C0C0;
                 }
-            body{ background-color: #00ffff;
-                
-            }
+            body{
+                background-color: #C0C0C0;
+                }
             ul{
                 list-style-type: circle;
                 color: black;
                 font-size: Small;
                 font-family: 'Open Sans', sans-serif;
-                background: #00ffff;
+                background: #C0C0C0;
                 }
         </style>
     </head>
@@ -51,15 +51,18 @@
         
         <img src="file-3.jpeg" alt="Picture of me.">
 
-        <section><h1><b>Nadeah Kay West</b></h1>
+        <section>
+        <h1><b>Nadeah Kay West</b></h1>
         <h2>Email: <a href="mailto:westnk@dukes.jmu.edu">westnk@dukes.jmu.edu</a></h2>
-        <h2>Portfolio: <a href="https://deekaywest.wordpess.com"> https://deekaywest.wordpess.com</a></h2></section>
+        <h2>Portfolio: <a href="https://deekaywest.wordpess.com"> https://deekaywest.wordpess.com</a></h2>
+        <h2>Instagram: <a href="https://www.instagram.com/deekaywest/">@deekaywest</a></h2>
+        </section>
 
         <section><h1><b id="Education">Education</b></h1>
         <h2><a href="jmu.edu">James Madison University</a></h2>
             <ul>
             <li>Expected Graduation date: 12/2020</li>
-            <li>Major: Media Arts and Design</li>
+            <li>Major: <a href="https://www.jmu.edu/smad/">Media Arts and Design</a></li>
             <li>Concentraion: Interactive Design</li>
             <li>Double Minor in Gerenal Business and Communications</li>
             <li>Current Year: Senior (2019-20)</li>
@@ -80,13 +83,13 @@
         </section>
 
         <section><h1><b id="Work-Experience">Work Experience</b></h1>
-        <h2>International Administrative Assistant at Hilldrup Moving and Storage (05/2017-08/2019)</h2>
+        <h2>International Administrative Assistant at <a href="https://www.hilldrup.com/">Hilldrup Moving and Sorage</a>(05/2017-08/2019)</h2>
             <ul>
             <li>Worked in the International Department computing rates</li>
             <li>contacted various partners around the world to establish rates for government moves</li> <li>Created mass spreadsheets to compare partners in various countries</li>
             <li>Helped with the relaunch of the company website to make it more user friendly</li>
             </ul>
-        <h2>Gymnastics Coach at Skyline Gymnastics (09/2016-04/2018)</h2>
+        <h2>Gymnastics Coach at <a href="https://www.skylinegymnastics.net/"> Skyline Gymnastics</a>(09/2016-04/2018)</h2>
             <ul>
             <li>Worked with beginner level girls in the development of gymnastics and life skills</li> <li>Rotated the children through different gymnastics stations</li>
             <li>Helped set up and break down mats at the beginning and end of the program</li>
@@ -107,10 +110,10 @@
 
         <section><h1><b id="Affiliations">Affiliations</b></h1>
             <ul>
-            <li>JMU Club Gymnatics</li>
-            <li>Sigma Gamma Rho Sorority, Incorporated</li>
-            <li>American Advertising Federation</li>
-            <li>JMU Advertising Club</li>
+            <li><a href="https://www.jmu.edu/recreation/sports/sport-clubs/clubs/gymnastics.shtml">JMU Club Gymnastics</a></li>
+            <li><a href="https://www.sgrho1922.org/">Sigma Gamma Rho Sorority, Incorporated</a></li>
+            <li><a href="https://www.aaf.org/">American Advertising Federation</a></li>
+            <li><a href="https://www.jmuadclub.com/">JMU Advertising Club</a></li>
             </ul>
         </section>
     </body>
