--- a/my_story.html
+++ b/my_story.html
@@ -1,16 +1,64 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>What's Your Story </title>
+        <title>What's Your Story?</title>
         <meta charset="utf-8">
-        <!-- additional infomration for seo optimization -->
-        <meta name="description" content="This is a summary/snippet for the page">
-        <meta name ="author" content="Nadeah West">
+        <meta name="description" content="This is my story">
+        <meta name="author" content="Nadeah West">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+        <style>
+            h1 {
+                color: Purple;
+                font-size: large;
+                font-family: 'Open Sans', sans-serif;
+                background: #C0C0C0;
+                }
+            h2{
+                color: black;
+                font-size: Medium;
+                font-family: 'Open Sans', sans-serif;
+                background: #C0C0C0;
+                }
+            h3{
+                color: black;
+                font-size: Small;
+                font-family: 'Open Sans', sans-serif;
+                background: #C0C0C0;
+                }
+            body{
+                background-color: #C0C0C0;
+                }
+            ul{
+                list-style-type: circle;
+                color: black;
+                font-size: Small;
+                font-family: 'Open Sans', sans-serif;
+                background: #C0C0C0;
+                }
+        </style>
     </head>
     <body>
         <h1>An adventurous explorer who runs the world around her.</h1>
-        <section><p><ul> <li>Creative</li> <li>Intelligent</li> <li>Fun-Loving</li> <li>Ambitious</li> <li>Calm</li> <li>Goofy</li> <li>Athletic</li> <li>Brave</li></ul></p></section>
+        <section><nav><ul>
+            <li><a href="my_story.html">About</a></li>
+            <li><a href="West-Resume.html">Resume</a></li>
+        </ul></nav></section>
+
+        <section>
+            <ul>
+                <li>Creative</li>
+                <li>Intelligent</li>
+                <li>Fun-Loving</li>
+                <li>Ambitious</li>
+                <li>Calm</li>
+                <li>Goofy</li>
+                <li>Athletic</li>
+                <li>Brave</li>
+            </ul>
+        </section>
+
         <section><img src="file-4.jpeg" alt=""><img src="file4-2.jpeg" alt=""><img src="file5-1.jpeg" alt=""><img src="file3-2.jpeg" alt=""><img src="file1-2.jpeg" alt=""></section>
-        <section><p>inspiration <a href="https://www.youtube.com/">YouTube.com</p></section>
+
+        <section>inspiration<a href="https://www.youtube.com/">YouTube.com</a></section>
     </body>
 </html> 
