--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
         <meta name="author" content="Nadeah West">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
         <style>
+            html{
+                box-sizing:border-box;
+                }
+                *,*:before, *after {box-sizing:inherit;
+                }
+            #menu{
+                border:3px solid purple;
+                }
+            section{
+                background: #C0C0C0;
+                Margin: 10px
+                Padding: 20px
+                border: 1px dotted purple;
+                width:240px
+                }
+            .title{
+                background color: #C0C0C0;
+                color: purple
+                line-height: 4em;
+                }
             h1 {
                 color: Purple;
                 font-size: large;
@@ -57,7 +77,7 @@
             </ul>
         </section>
 
-        <section><img src="file-4.jpeg" alt=""><img src="file4-2.jpeg" alt=""><img src="file5-1.jpeg" alt=""><img src="file3-2.jpeg" alt=""><img src="file1-2.jpeg" alt=""></section>
+        <section><img src="media/file-4.jpeg" alt=""><img src="media/file4-2.jpeg" alt=""><img src="media/file5-1.jpeg" alt=""><img src="media/file3-2.jpeg" alt=""><img src="media/file1-2.jpeg" alt=""></section>
 
         <section>inspiration<a href="https://www.youtube.com/">YouTube.com</a></section>
     </body>
