--- a/West-Resume.html
+++ b/West-Resume.html
@@ -49,7 +49,7 @@
 
     <body>
         
-        <img src="file-3.jpeg" alt="Picture of me.">
+        <img src="media/file-3.jpeg" alt="Picture of me." width="200">
 
         <section>
         <h1><b>Nadeah Kay West</b></h1>
